[package]
name = "caniuse_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
structopt = "0.3"
url = "2.5.2"
log = "0.4.22"
env_logger = "0.11.5"
colored = "2.1.0"
tabled = "0.16.0"
